@@ -19,12 +19,11 @@ import static de.cuioss.jsf.bootstrap.taginput.TagInputRendererTest.CODE_TYPE_1;
 import static de.cuioss.jsf.bootstrap.taginput.TagInputRendererTest.CODE_TYPE_2;
 import static de.cuioss.tools.collect.CollectionLiterals.immutableSortedSet;
 
-import java.util.Collections;
-import java.util.Set;
-
 import de.cuioss.test.jsf.converter.AbstractConverterTest;
 import de.cuioss.test.jsf.converter.TestItems;
 import de.cuioss.uimodel.model.conceptkey.ConceptKeyType;
+
+import java.util.Set;
 
 class ConceptKeyStringConverterTest extends AbstractConverterTest<ConceptKeyStringConverter, Set<ConceptKeyType>> {
 
@@ -37,6 +36,6 @@ class ConceptKeyStringConverterTest extends AbstractConverterTest<ConceptKeyStri
         testItems.addValidObjectWithStringResult(immutableSortedSet(CODE_TYPE_1), "6964656e74696669657231");
         testItems.addValidObjectWithStringResult(immutableSortedSet(CODE_TYPE_1, CODE_TYPE_2),
                 "6964656e74696669657231,6964656e74696669657232");
-        testItems.addValidObject(Collections.singleton(new TestConceptKey()));
+        testItems.addValidObject(Set.of(new TestConceptKey()));
     }
 }
